bases/apps/grocy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: grocy
    app.kubernetes.io/name: grocy
    app.kubernetes.io/service: grocy
  name: grocy
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: grocy
  type: ClusterIP
